[package]
name = "log4rs-macros"
version = "1.1.1"
authors = ["Evanzp0"]
description = "macros for log4rs that use mod as default target"
license = "MIT/Apache-2.0"
repository = "https://github.com/evanzp0/log4rs-macros"
readme = "README.md"
keywords = ["log", "logger", "logging", "log4"]
edition = '2018'

[dependencies]
log4rs = "1.1"
once_cell = "1.13"